--- a/index.html
+++ b/index.html
@@ -9,10 +9,29 @@
     </head>
     <body>
         <header>
-            <h1> Barraca da Jessy</h1>            
+            <section class="primeira">
+                <div class="naosei">
+                <p class="cont"><a href="https://www.instagram.com/_jessicaregina_/">Jessy no insta</a></p>
+                    <p class="desc">Na compra de 3 peças de roupa você leva um cookie!</p>
+                    <p class="extra"></p>                                    
+                </div>
+                <div class="naosei">
+                    <p class="cont"><input type="text" placeholder="busca"></p>
+                    <h2 class="desc">logo</h2>
+                    <p class="extra">atendimento <br> minha conta <br> meu carrinho </p>
+                </div>                                
+                <div class="naosei">
+                    <ul class="lista1">
+                            <li class="il"><a href="#">início</a></li>
+                            <li class="il"><a href="#">produtos</a></li>
+                            <li class="il"><a href="#">contato</a></li>
+                            <li><a href="#">trocas & devoluções</a></li>
+                        </ul>                    
+                </div>
+            </section>
         </header>
         <main>
-            <section>
+            <section class="corpo">
                 <div class="apresentação">
                     <h2>Bem-vindo à Barraca da Jessy!</h2>
                     <p>Aqui você encontra os melhores produtos feitos com carinho.</p>    
