--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt">
     <head>
@@ -11,21 +12,23 @@
         <header>
             <section class="primeira">
                 <div class="naosei">
-                <p class="cont"><a href="https://www.instagram.com/_jessicaregina_/">Jessy no insta</a></p>
-                    <p class="desc">Na compra de 3 peças de roupa você leva um cookie!</p>
-                    <p class="extra"></p>                                    
+                    <p class="esq"><a href="https://www.instagram.com/_jessicaregina_/">Jessy no insta</a></p>
+                    <p class="cen">Na compra de 3 peças de roupa você leva um cookie!</p>
+                    <p class="dir"></p>                                    
                 </div>
                 <div class="naosei">
-                    <p class="cont"><input type="text" placeholder="busca"></p>
-                    <h2 class="desc">logo</h2>
-                    <p class="extra">atendimento <br> minha conta <br> meu carrinho </p>
+                    <p class="esq2"><input type="text" placeholder="busca"></p>
+                    <div class="cen2">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/refs/heads/main/JEZ.avif" width="75vw" height="90vh" class="logo">
+                    </div>
+                    <p class="dir2">atendimento <br> minha conta <br> meu carrinho </p>
                 </div>                                
                 <div class="naosei">
                     <ul class="lista1">
                             <li class="il"><a href="#">início</a></li>
                             <li class="il"><a href="#">produtos</a></li>
                             <li class="il"><a href="#">contato</a></li>
-                            <li><a href="#">trocas & devoluções</a></li>
+                            <li class="il"><a href="#">trocas & devoluções</a></li>
                         </ul>                    
                 </div>
             </section>
