--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <main>
             <section class="corpo">
                 <div class="apresentação">
-                    <h2>Bem-vindo à Barraca da Jessy!</h2>
+                    <h2>Bem-vinda à Barraca da Jessy!</h2>
                     <p>Aqui você encontra os melhores produtos feitos com carinho.</p>    
                 </div>
             </section>            
