--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <section class="primeira">
                 <div class="naosei">
                     <p class="esq"><a href="https://www.instagram.com/_jessicaregina_/">Jessy no insta</a></p>
-                    <p class="cen">Na compra de 3 peças de roupa você leva um cookie!</p>
+                    <p class="cen">Na compra de 3 peças você leva um cookie!</p>
                     <p class="dir"></p>                                    
                 </div>
                 <div class="naosei">
@@ -36,8 +36,8 @@
         <main>
             <section class="corpo">
                 <div class="apresentação">
-                    <h2>Bem-vinda à Barraca da Jessy!</h2>
-                    <p>Aqui você encontra os melhores produtos feitos com carinho.</p>    
+                    <h2>Bem-vinda à JËZ acessórios</h2>
+                    <p>Aqui você encontra os melhores produtos pra você brilhar!</p>    
                 </div>
             </section>            
         </main>
