--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="naosei">
                     <p class="esq2"><input type="text" placeholder="busca"></p>
                     <div class="cen2">
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/refs/heads/main/JEZ.avif" width="75vw" height="90vh" class="logo">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/8e50499c9a8ec5f114b8fcabda7c6ee96e98734f/jez-ver%C3%A3o.png" width="75vw" height="90vh" class="logo">
                     </div>
                     <p class="dir2">atendimento <br> minha conta <br> meu carrinho </p>
                 </div>                                
