Fix HTML structure and update image source

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="naosei">
                     <p class="esq2"><input type="text" placeholder="busca"></p>
                     <div class="cen2">
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/8e50499c9a8ec5f114b8fcabda7c6ee96e98734f/jez-ver%C3%A3o.png" width="75vw" height="90vh" class="logo">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/43a7db9f54534567bafebb1b3d3b4bc0b85c46f7/jez-ver%C3%A3o%20cortada.png" width="75vw" height="90vh" class="logo">
                     </div>
                     <p class="dir2">atendimento <br> minha conta <br> meu carrinho </p>
                 </div>                                
@@ -45,3 +45,4 @@
         </footer>
     </body>
 </html>
+
