Change promotional message in index.html
Updated promotional text in the HTML file.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <section class="primeira">
                 <div class="naosei">
                     <p class="esq"><a href="https://www.instagram.com/_jessicaregina_/">Jessy no insta</a></p>
-                    <p class="cen">Na compra de 3 peças você leva um cookie!</p>
+                    <p class="cen">Compre 3 peças e ganhe um cookie!</p>
                     <p class="dir"></p>                                    
                 </div>
                 <div class="naosei">
@@ -45,4 +45,5 @@
         </footer>
     </body>
 </html>
+
 
