Fix HTML formatting and add missing div class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <p class="dir2">atendimento <br> minha conta <br> meu carrinho </p>
                 </div>                                
-                <div class="naosei">
+                <div class="naosei ultima-barra-de-texto">
                     <ul class="lista1">
                             <li class="il"><a href="#">início</a></li>
                             <li class="il"><a href="#">produtos</a></li>
@@ -45,5 +45,6 @@
         </footer>
     </body>
 </html>
+
 
 
