Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <section class="primeira">
-                <div class="naosei">
+                <div class="naosei ultima-barra-de-texto">
                     <p class="esq"><a href="https://www.instagram.com/_jessicaregina_/">Jessy no insta</a></p>
                     <p class="cen">Compre 3 peças e ganhe um cookie!</p>
                     <p class="dir"></p>                                    
@@ -45,6 +45,7 @@
         </footer>
     </body>
 </html>
+
 
 
 
