--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
         <main>
             <section class="corpo">
                 <div class="apresentação">
-                    <h2>Bem-vinda à JËZ acessórios</h2>
-                    <p>Aqui você encontra os melhores produtos pra você brilhar!</p>
-                    <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/9f5cabd5219459d70cd03a6d012f6ac231a06354/JEZ-praia.png" class="praia">    
+                    <div class=texto>
+                        <h2>Bem-vinda à JËZ acessórios</h2>
+                        <p>Aqui você encontra os melhores produtos pra você brilhar!</p>
+                    </div>    
+                <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/9f5cabd5219459d70cd03a6d012f6ac231a06354/JEZ-praia.png" class="praia">    
                 </div>
             </section>            
         </main>
@@ -45,6 +47,7 @@
         </footer>
     </body>
 </html>
+
 
 
 
