--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                         <h2>Bem-vinda à JËZ acessórios</h2>
                         <p>Aqui você encontra os melhores produtos pra você brilhar!</p>
                     </div>    
-                <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/9f5cabd5219459d70cd03a6d012f6ac231a06354/JEZ-praia.png" class="praia">    
+                    <div class"pad">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/9f5cabd5219459d70cd03a6d012f6ac231a06354/JEZ-praia.png" class="praia">    
+                    </div>
                 </div>
             </section>            
         </main>
@@ -47,6 +49,7 @@
         </footer>
     </body>
 </html>
+
 
 
 
