Refactor index.html for improved structure

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <body>
         <header>
             <section class="primeira">
-                <div class="naosei ultima-barra-de-texto">
-                    <p class="esq"><a href="https://www.instagram.com/_jessicaregina_/">Jessy no insta</a></p>
+                <div class="top-bar">
+                    <p class="esq d-none"><a href="https://www.instagram.com/_jessicaregina_/">Jessy no insta</a></p>
                     <p class="cen">Compre 3 peças e ganhe um cookie!</p>
-                    <p class="dir"></p>                                    
+                    <p class="dir d-none"></p>                                    
                 </div>
-                <div class="naosei">
+                <div class="top-bar">
                     <p class="esq2"><input type="text" placeholder="busca"></p>
                     <div class="cen2">
                         <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/43a7db9f54534567bafebb1b3d3b4bc0b85c46f7/jez-ver%C3%A3o%20cortada.png" width="75vw" height="90vh" class="logo">
                     </div>
                     <p class="dir2">atendimento <br> minha conta <br> meu carrinho </p>
                 </div>                                
-                <div class="naosei ultima-barra-de-texto">
+                <div class="top-bar d-none">
                     <ul class="lista1">
                             <li class="il"><a href="#">início</a></li>
                             <li class="il"><a href="#">produtos</a></li>
@@ -49,6 +49,7 @@
         </footer>
     </body>
 </html>
+
 
 
 
