Fix HTML formatting and remove extra lines

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                     <p class="dir d-none"></p>                                    
                 </div>
                 <div class="top-bar">
-                    <p class="esq2"><input type="text" placeholder="busca"></p>
+                    <p class="esq2 d-none"><input type="text" placeholder="busca"></p>
                     <div class="cen2">
                         <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/43a7db9f54534567bafebb1b3d3b4bc0b85c46f7/jez-ver%C3%A3o%20cortada.png" width="75vw" height="90vh" class="logo">
                     </div>
-                    <p class="dir2">atendimento <br> minha conta <br> meu carrinho </p>
+                    <p class="dir2 d-none">atendimento <br> minha conta <br> meu carrinho </p>
                 </div>                                
                 <div class="top-bar d-none">
                     <ul class="lista1">
@@ -49,6 +49,7 @@
         </footer>
     </body>
 </html>
+
 
 
 
