--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="color-scheme" content="light">
         <title>Site da Jereca</title>
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>     
@@ -49,6 +50,7 @@
         </footer>
     </body>
 </html>
+
 
 
 
