--- a/index.html
+++ b/index.html
@@ -33,18 +33,30 @@
                 </div>
             </section>
         </header>
-        <main>
-            <section class="corpo">
-                <div class="apresentação">
-                    <div class=texto>
-                        <h2>Bem-vinda à JËZ acessórios</h2>
-                        <p>Aqui você encontra os melhores produtos pra você brilhar!</p>
-                    </div>    
-                    <div class="pad">
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/9f5cabd5219459d70cd03a6d012f6ac231a06354/JEZ-praia.png" class="praia">    
-                    </div>
+        <main>            
+            <div class="apresentação">
+                <div class="padhorizontal">
+                    <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-mais-cortada.png" class="praia">    
                 </div>
-            </section>            
+                <div class="padvertical">
+                    <div class="fotobloco">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+                    </div>
+                    <div class="fotobloco">  
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
+                    </div>
+                    <div class="fotobloco">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+                    </div>
+                    <div class="fotobloco1">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
+                    </div>
+                </div>                
+                <div class="texto">
+                    <h2>Bem-vinda à JËZ acessórios</h2>
+                    <p>Aqui você encontra os melhores produtos pra você brilhar!</p>
+                </div>
+            </div>                        
         </main>
         <footer>
         </footer>
