Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -51,7 +51,21 @@
                     <div class="fotobloco1">
                         <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
                     </div>
-                </div>                
+                </div> 
+                <div class="padvertical">
+                    <div class="fotobloco">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
+                    </div>
+                    <div class="fotobloco">  
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+                    </div>
+                    <div class="fotobloco">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
+                    </div>
+                    <div class="fotobloco1">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+                    </div>
+                </div>
                 <div class="texto">
                     <h2>Bem-vinda à JËZ acessórios</h2>
                     <p>Aqui você encontra os melhores produtos pra você brilhar!</p>
@@ -61,4 +75,5 @@
         <footer>
         </footer>
     </body>
+
 </html>
