Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     </div>
                 </div>
                 <div class="texto">
-                    <h2>Bem-vinda à JËZ acessórios</h2>
-                    <p>Aqui você encontra os melhores produtos pra você brilhar!</p>
+                    <h2 class="sand">Bem-vinda à JËZ acessórios</h2>
+                    <p class+"sand">Aqui você encontra os melhores produtos pra você brilhar!</p>
                 </div>
             </div>                        
         </main>
@@ -77,3 +77,4 @@
     </body>
 
 </html>
+
