Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="texto">
                     <h2 class="sand">Bem-vinda à JËZ acessórios</h2>
-                    <p class+"sand">Aqui você encontra os melhores produtos pra você brilhar!</p>
+                    <p class="sand">Aqui você encontra os melhores produtos pra você brilhar!</p>
                 </div>
             </div>                        
         </main>
@@ -77,4 +77,5 @@
     </body>
 
 </html>
+
 
