--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </div>
                     <p class="dir2 d-none">atendimento <br> minha conta <br> meu carrinho </p>
                 </div>                                
-                <div class="top-bar d-none">
+                <div class="top-bar d-none ultimabarra">
                     <ul class="lista1">
                             <li class="il"><a href="#">início</a></li>
                             <li class="il"><a href="#">produtos</a></li>
@@ -77,5 +77,6 @@
     </body>
 
 </html>
+
 
 
