--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </div>
                     <p class="dir2 d-none">atendimento <br> minha conta <br> meu carrinho </p>
                 </div>                                
-                <div class="top-bar d-none ultimabarra">
+                <div class="top-bar d-none">
                     <ul class="lista1">
                             <li class="il"><a href="#">início</a></li>
                             <li class="il"><a href="#">produtos</a></li>
@@ -34,49 +34,48 @@
             </section>
         </header>
         <main>            
-            <div class="apresentação">
-                <div class="padhorizontal">
-                    <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-mais-cortada.png" class="praia">    
-                </div>
-                <div class="padvertical">
-                    <div class="fotobloco">
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+            <section>
+                <div class="apresentação">
+                    <div class="padhorizontal">
+                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-mais-cortada.png" class="praia">    
                     </div>
-                    <div class="fotobloco">  
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
+                    <div class="padvertical">
+                        <div class="fotobloco fotomobile">
+                            <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+                        </div>
+                        <div class="fotobloco fotomobile">  
+                            <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
+                        </div>
+                        <div class="fotobloco fotomobile">
+                            <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+                        </div>
+                        <div class="fotobloco fotomobile">
+                            <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
+                        </div>   
+                        <div class="fotobloco fotomobile">  
+                            <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+                        </div>
+                        <div class="fotobloco fotomobile">  
+                            <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+                        </div>                    
+                        <div class="fotobloco fotomobile">
+                            <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
+                        </div>
+                        <div class="fotobloco fotomobile">
+                            <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+                        </div>
                     </div>
-                    <div class="fotobloco">
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
+                    <div class="texto">
+                        <h2 class="sand">Bem-vinda à JËZ acessórios</h2>
+                        <p class="sand">Aqui você encontra os melhores produtos pra você brilhar!</p>
                     </div>
-                    <div class="fotobloco1">
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
-                    </div>
-                </div> 
-                <div class="padvertical">
-                    <div class="fotobloco">
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
-                    </div>
-                    <div class="fotobloco">  
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
-                    </div>
-                    <div class="fotobloco">
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/03e96913ad3bda76464043a147f474b9ae8f2bac/JEZ-praia-isqueiro.png" class="praiavertical">
-                    </div>
-                    <div class="fotobloco1">
-                        <img src="https://raw.githubusercontent.com/maiteuxzanela/Fotos/b4c908894d5da2f8fe621654be2255359b8636d3/JEZ-praia-colar.png" class="praiavertical">
-                    </div>
-                </div>
-                <div class="texto">
-                    <h2 class="sand">Bem-vinda à JËZ acessórios</h2>
-                    <p class="sand">Aqui você encontra os melhores produtos pra você brilhar!</p>
-                </div>
-            </div>                        
+                </div>  
+            </section>                          
         </main>
         <footer>
         </footer>
     </body>
 
 </html>
-
 
 
